--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "coder-camps-js",
-  "description": "A MEAN stack application.",
+  "name": "gocinema",
+  "description": "movie application",
   "license": "MIT",
   "moduleType": [],
   "homepage": "",
