--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dotenv": "^2.0.0",
     "ejs": "^2.4.1",
     "express": "^4.14.0",
+    "http-server": "^0.9.0",
     "mongoose": "^4.7.3",
     "morgan": "^1.7.0",
+    "moviedb": "^0.2.7",
     "node": "0.0.0",
     "request": "^2.79.0",
     "serve-favicon": "^2.3.0"
